# echolon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  TRADEMARKS.md  UPDATES_SINCE_v0.1.5.md  glama.json  llms.txt  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: API_REFERENCE.md  COMPONENT_GUIDE.md  CONFIG_REFERENCE.md  ERROR_CATALOG.md  MIGRATION_NOTES.md  PATTERNS.md  QUICK_START.md
docs/errors/: BT-001.md  BT-002.md  BT-003.md  BT-010.md  CFG-001.md  CFG-002.md  DAT-001.md  DAT-002.md  DAT-003.md  DAT-004.md  IND-001.md  IND-002.md  IND-003.md  IND-004.md  IND-005.md  LIV-001.md  LIV-002.md  LIV-003.md  PRM-001.md  PRM-002.md  PRM-004.md  README.md  STR-001.md  STR-003.md  VAL-001.md  VAL-003.md  VAL-006.md
echolon/: __init__.py  errors.py  llms.txt
echolon/_internal/: console_utils.py  param_resolution.py  strategy_files.py  structured_logging.py
echolon/analytics/: __init__.py  basis_carry.py
echolon/backtest/: __init__.py  analyzers.py  cli.py  engine_factory.py  logging_utils.py  mfe_mae.py  portfolio_runner.py  reporting.py  runner.py  schemas.py
echolon/bundle/: __init__.py  cli.py  manifest.py
echolon/config/: __init__.py  backtest_config.py  feature_flags.py  indicator_config.py  optuna_config.py  paths_config.py  quant_engine.py  quick_start.py  settings.py
echolon/data/: __init__.py  backtest_data.py  live.py  live_data.py  run.py  schemas.py
echolon/engine/: factory.py
echolon/indicators/: __init__.py  catalog.py  cli.py  protocols.py  run.py  run_indicators.py  schema.py
echolon/lib/: json_utils.py  strategy_log.py
echolon/live/: __init__.py  book.py  cli.py  dashboard.py  data_logger.py  portfolio_risk.py  portfolio_runner.py  runner.py  slot_aware_portfolio.py  state_writer.py  trading_slot.py
echolon/markets/: __init__.py  base.py  empirical_expiry.py  expiry.py  gfex_calendar.py  interface.py
echolon/mcp/: __init__.py  server.py
echolon/native/: __init__.py  examples_registry.py  workspace.py
echolon/panel/: __init__.py  models.py  qc.py  sector.py  snapshot.py
echolon/portfolio/: __init__.py  combiner.py  constructor.py  degradation.py  models.py  strategy.py  two_sleeve.py
echolon/quant_engine/: LOGGING_DESIGN.md  __init__.py  calculate_mfe_mae.py  engine_factory.py  logging_utils.py  reporting.py  run_backtest.py  types.py
echolon/signals/: __init__.py  base.py  models.py  validation.py
echolon/strategy/: __init__.py  base.py  component.py  interfaces.py  loader.py  logging.py  parameter_architecture.py  preflight.py  schemas.py  state_manager.py
echolon/tests/: test_wfa_completeness.py
examples/01_minimal/: README.md  entry.py  strategy_indicator_list.json  strategy_params.py
examples/02_momentum_breakout/: README.md  strategy_indicator_list.json  strategy_params.py
examples/03_rsi_mean_reversion/: README.md  exit.py  sizer.py  strategy.py  strategy_indicator_list.json
scripts/: audit_echolon_api_skills.py  build_czce_new_products_expiry_data.py  build_empirical_last_trade_data.py  build_gfex_expiry_data.py
spikes/: __init__.py  p3_wp31_engine_spike.py
tests/: test_backtest_config.py  test_error_catalog_compliance.py  test_error_docs_coverage.py  test_imports.py  test_indicator_config.py  test_legacy_format_rejection.py  test_market_adapters.py  test_optuna_config.py  test_optuna_optimizer_config.py  test_qmt_logger_slot_dir.py  test_quick_start.py  test_regime_aware_validation.py  test_strategy_loader.py  test_strategy_loader_relative_imports.py  test_trading_context.py
tests/_internal/: test_console_utils.py  test_param_resolution.py  test_strategy_files.py  test_structured_logging.py
tests/analytics/: test_basis_carry.py
tests/backtest/: test_backtest_cli.py  test_book_cost_e2e.py  test_book_slippage_rounding.py  test_contract_price_cache_preload.py  test_cost_e2e.py  test_error_codes.py  test_exact_date_execution.py  test_execution_contract_schedule.py  test_failure_reporter.py  test_feed_identifier_safety.py  test_flag12_export_hook.py  test_futures_certification_fixture.py  test_logging_utils.py  test_nominal_cycle_schedule.py  test_optimization_failure.py  test_optuna_n_jobs_sequential.py  test_parallel_spawn_isolation.py  test_risk_policy_binding.py  test_slippage_override.py  test_stamp_duty_schedule.py  test_structured_slippage_by_intent.py  test_structured_slippage_v2_fields.py  test_terminal_lifecycle.py  test_wfa_runner_binding_resolver_passthrough.py  test_wfa_runner_market_adapter_factory.py  test_wfa_runner_selection_passthrough.py  test_zero_trade_artifact_cleanup.py
tests/bundle/: test_bundle_manifest.py
tests/cli/: test_backtest_smoke.py  test_doctor.py  test_hello_smoke.py  test_init_smoke.py  test_paths_config_flag.py
tests/config/: test_market_factory_from_session.py  test_no_cwd_at_import.py  test_paths_config.py  test_public_api_paths_kwarg.py  test_shfe_cost_contract.py  test_trading_context_surface.py
tests/data/: test_backtest_loader_warns_on_nan_sidecar.py  test_error_codes.py  test_extractor_capabilities.py  test_extractor_output_dir_required.py  test_load_ohlcv_multi_frequency.py  test_loader_path_override.py  test_ohlcv_loader_dat_001.py  test_paths_injection.py  test_pipeline_split.py  test_public_api.py  test_sample_bundle.py  test_session_availability_loader_fails_loudly.py  test_trading_calendar_source_required.py  test_xtdata_client_protocol.py
tests/fixtures/: conftest.py  trial_selector_pin.csv
tests/indicators/: conftest.py  test_calculator_column_checks.py  test_carry_indicators.py  test_carry_pipeline_routing.py  test_carry_series_builder.py  test_carry_utils.py  test_catalog_carry.py  test_catalog_derived_grammar.py  test_catalog_hydration.py  test_catalog_validate.py  test_classifier_confidence_emission.py  test_compute_from_frame.py  test_compute_merged.py  test_error_codes.py  test_examples_and_templates_validate.py  test_indicator_list_schema.py  test_indicators_cli.py  test_loader.py  test_merge_indicators_flat_dict.py  test_optimize_regime_public_api.py  (+6 more)
(+550 files in other folders)
